<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".PlanningActivity">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/categorySpinner3"
            android:layout_width="95dp"
            android:layout_height="41dp"
            android:layout_marginStart="164dp"
            android:layout_marginTop="232dp"
            android:layout_marginEnd="60dp"
            android:backgroundTint="@color/colorWhite"
            android:entries="@array/currency"
            android:popupBackground="@color/colorBlack"
            android:text="@string/currency"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sellerTextView6"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="272dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="center_vertical|end"
            android:text="@string/salary"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sellerTextView9"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="232dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="center_vertical|end"
            android:text="@string/currency"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sellerTextView7"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="312dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="center_vertical|end"
            android:text="@string/outcome"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/sellerEditText7"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="312dp"
            android:layout_marginEnd="60dp"

            android:ems="10"
            android:textAlignment="textStart"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sellerTextView8"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="352dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="center_vertical|end"
            android:text="@string/cost"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sellerTextView11"
            android:layout_width="61dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="392dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="center_vertical|end"
            android:text="@string/long_term"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sellerTextView12"
            android:layout_width="61dp"
            android:layout_height="38dp"
            android:layout_marginStart="176dp"
            android:layout_marginTop="392dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:gravity="center_vertical|end"
            android:text="@string/short_term"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/sellerEditText5"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="272dp"
            android:layout_marginEnd="60dp"

            android:ems="10"
            android:textAlignment="textStart"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/sellerEditText6"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="352dp"
            android:layout_marginEnd="60dp"

            android:ems="10"
            android:textAlignment="textStart"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/shorttermedit"
            android:layout_width="74dp"
            android:layout_height="39dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="392dp"
            android:layout_marginEnd="8dp"

            android:ems="10"
            android:textAlignment="textStart"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/longtermedit"
            android:layout_width="74dp"
            android:layout_height="39dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="392dp"
            android:layout_marginEnd="176dp"

            android:ems="10"
            android:textAlignment="textStart"
            android:textColor="#FFFFFFFF"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewPlanning"
            android:layout_width="303dp"
            android:layout_height="212dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        </android.support.v7.widget.RecyclerView>


        <Button
            android:id="@+id/updateListPlanningButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="80dp"
            android:text="@string/update_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <Button
            android:id="@+id/updateListPlanningButton2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:layout_marginStart="200dp"
            android:layout_marginTop="80dp"
            android:text="@string/cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="358dp" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>