<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".transactionActivities.TransactionActivity">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/catalogueDialogButton2"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="152dp"
            android:layout_marginEnd="8dp"
            android:text="@string/chart_transaction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewTransaction"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        </android.support.v7.widget.RecyclerView>



        <Button
            android:id="@+id/updateListTransactionButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="8dp"
            android:text="@string/update_list"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <Button
            android:id="@+id/catalogueDialogButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="8dp"
            android:text="@string/sum_transaction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <Button
            android:id="@+id/cancelCatalogueButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:text="@string/cancel"
            android:textColorLink="@color/colorAccent"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateListTransactionButton" />

        <TextView
            android:id="@+id/filterTextViewTransaction1"
            android:layout_width="110dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="12sp"
            android:visibility="invisible"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <TextView
            android:id="@+id/filterTextViewTransaction2"
            android:layout_width="110dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="12sp"
            android:visibility="invisible"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <TextView
            android:id="@+id/filterTextViewTransaction3"
            android:layout_width="110dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="12sp"
            android:visibility="invisible"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filterTextView1" />

        <TextView
            android:id="@+id/filterTextViewTransaction4"
            android:layout_width="110dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="8dp"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="12sp"
            android:visibility="invisible"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/filterTextView2" />

        <TextView
            android:id="@+id/filterTextViewTransaction5"
            android:layout_width="110dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="8dp"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="12sp"
            android:visibility="invisible"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="358dp" />



        <android.support.constraint.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>